--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -102,7 +102,7 @@
                     <!-- 新增中文leetcode -->
                     {% if site.leetcode_cn_username %}
                     <li>
-                        <a target="_blank" href="https://leetcode-cn.com/u/{{ site.leetcode_username }}">
+                        <a target="_blank" href="https://leetcode-cn.com/{{ site.leetcode_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
