--- a/portfolio/css/timeline.css
+++ b/portfolio/css/timeline.css
@@ -8,7 +8,7 @@ body, html {
 	font-size: 100%;
 	padding: 0;
 	margin: 0;
-	background-image: url("https://th.bing.com/th/id/R.7a03eb73d198b1bcc51b5b6f6544f302?rik=PX7q%2bYd6RgDbaw&riu=http%3a%2f%2fimg30.360buyimg.com%2fjgsq-productsoa%2fjfs%2ft328%2f25%2f124719891%2f41427%2f6635b680%2f5402d569Nb4bfe554.jpg&ehk=%2fbAKWhybj5fHU%2fVGqJQgdmz0VwprdEcOTMmyBrVuNcY%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1");
+	/* background-image: url("https://th.bing.com/th/id/R.7a03eb73d198b1bcc51b5b6f6544f302?rik=PX7q%2bYd6RgDbaw&riu=http%3a%2f%2fimg30.360buyimg.com%2fjgsq-productsoa%2fjfs%2ft328%2f25%2f124719891%2f41427%2f6635b680%2f5402d569Nb4bfe554.jpg&ehk=%2fbAKWhybj5fHU%2fVGqJQgdmz0VwprdEcOTMmyBrVuNcY%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1"); */
 }
 
 .main a{
