--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,10 +42,11 @@
                         <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa  fa-stack-1x fa-inverse">bili</i>
+                                <!-- <i class="fa  fa-stack-1x fa-inverse">bili</i> -->
 
+                                <i class="fa-brands fa-bilibili"></i>
 
-                                
+    
                             </span>
                         </a>
                     </li>
@@ -110,6 +111,7 @@
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                             </span>
+                            <!-- <img src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/24/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-shadow-tal-revivo.png"/>  -->
                         </a>
                     </li>
                     {% endif %}
