--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <!-- <i class="fa  fa-stack-1x fa-inverse">bili</i> -->
 
-                                <i class="fa-brands fa-bilibili"></i>
+                                <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i>
 
     
                             </span>
