update about me

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,9 +42,9 @@
                         <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <!-- <i class="fa  fa-stack-1x fa-inverse">bili</i> -->
+                                <i class="fa fa-stack-1x fa-inverse">bili</i>
 
-                                <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i>
+                                <!-- <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i> -->
 
     
                             </span>
@@ -106,7 +106,7 @@
                     <!-- 新增中文leetcode -->
                     {% if site.leetcode_cn_username %}
                     <li>
-                        <a target="_blank" href="https://leetcode-cn.com/{{ site.leetcode_username }}">
+                        <a target="_blank" href="https://leetcode-cn.com/{{ site.leetcode_cn_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
