--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,14 +40,14 @@
                     {% if site.bilibili_username %}
                     <li>
                         <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}">
-                            <span class="fa-stack fa-lg">
+                            <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-stack-1x fa-inverse">bili</i>
+                                <i class="fa fa-stack-1x fa-inverse">bili</i> -->
 
                                 <!-- <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i> -->
+                            <!-- </span> -->
 
-    
-                            </span>
+                            <img src="https://img.icons8.com/color/29/000000/bilibili.png"/></a>
                         </a>
                     </li>
                     {% endif %}
