--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,10 +76,11 @@
                     {% if site.github_username %}
                     <li>
                         <a target="_blank" href="https://github.com/{{ site.github_username }}">
-                            <span class="fa-stack fa-lg">
+                            <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                            </span>
+                            </span> -->
+                            <img src="https://img.icons8.com/plasticine/100/000000/github-squared.png"/>
                         </a>
                     </li>
                     {% endif %}
@@ -96,10 +97,12 @@
                     {% if site.leetcode_username %}
                     <li>
                         <a target="_blank" href="https://leetcode.com/{{ site.leetcode_username }}">
-                            <span class="fa-stack fa-lg">
+                            <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
-                            </span>
+                            </span> -->
+                            <img src="https://img.icons8.com/external-tal-revivo-fresh-tal-revivo/28/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-fresh-tal-revivo.png"/>
+
                         </a>
                     </li>
                     {% endif %}
@@ -107,11 +110,11 @@
                     {% if site.leetcode_cn_username %}
                     <li>
                         <a target="_blank" href="https://leetcode-cn.com/{{ site.leetcode_cn_username }}">
-                            <span class="fa-stack fa-lg">
+                            <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
-                            </span>
-                            <!-- <img src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/24/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-shadow-tal-revivo.png"/>  -->
+                            </span> -->
+                            <img src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/24/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-shadow-tal-revivo.png"/> 
                         </a>
                     </li>
                     {% endif %}
