update about me

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
                     <!-- 新增bilibili -->
                     {% if site.bilibili_username %}
                     <li>
-                        <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}" style="cursor:help">
+                        <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}" style="cursor:pointer">
                             <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-stack-1x fa-inverse">bili</i> -->
@@ -75,12 +75,12 @@
                     {% endif %}
                     {% if site.github_username %}
                     <li>
-                        <a target="_blank" href="https://github.com/{{ site.github_username }}" style="cursor:help">
+                        <a target="_blank" href="https://github.com/{{ site.github_username }}" style="cursor:pointer">
                             <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                             </span> -->
-                            <img src="https://img.icons8.com/plasticine/24/000000/github-squared.png"/>
+                            <img src="https://img.icons8.com/material-outlined/24/000000/github.png"/>
                         </a>
                     </li>
                     {% endif %}
@@ -96,7 +96,7 @@
                     {% endif %}
                     {% if site.leetcode_username %}
                     <li>
-                        <a target="_blank" href="https://leetcode.com/{{ site.leetcode_username }}" style="cursor:help">
+                        <a target="_blank" href="https://leetcode.com/{{ site.leetcode_username }}" style="cursor:pointer">
                             <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
@@ -109,7 +109,7 @@
                     <!-- 新增中文leetcode -->
                     {% if site.leetcode_cn_username %}
                     <li>
-                        <a target="_blank" href="https://leetcode-cn.com/{{ site.leetcode_cn_username }}" style="cursor:help">
+                        <a target="_blank" href="https://leetcode-cn.com/{{ site.leetcode_cn_username }}" style="cursor:pointer">
                             <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
