--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,7 @@
                     <!-- 新增bilibili -->
                     {% if site.bilibili_username %}
                     <li>
+
                         <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_username }}" style="cursor:pointer">
                             <!-- <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -46,8 +47,10 @@
 
                                 <!-- <i class="fa fa-bilibili fa-stack-1x fa-inverse"></i> -->
                             <!-- </span> -->
-
-                            <img src="https://img.icons8.com/color/29/000000/bilibili.png"/></a>
+                                <span>
+                                    <img src="https://img.icons8.com/color/35/000000/bilibili.png"/></a>
+                                </span>
+                           
                         </a>
                     </li>
                     {% endif %}
@@ -80,7 +83,7 @@
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                             </span> -->
-                            <img src="https://img.icons8.com/material-outlined/24/000000/github.png"/>
+                            <img src="https://img.icons8.com/material-outlined/30/000000/github.png"/>
                         </a>
                     </li>
                     {% endif %}
@@ -101,7 +104,7 @@
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                             </span> -->
-                            <img src="https://img.icons8.com/external-tal-revivo-fresh-tal-revivo/28/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-fresh-tal-revivo.png"/>
+                            <img src="https://img.icons8.com/external-tal-revivo-fresh-tal-revivo/35/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-fresh-tal-revivo.png"/>
 
                         </a>
                     </li>
@@ -114,7 +117,7 @@
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code fa-stack-1x fa-inverse"></i>
                             </span> -->
-                            <img src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/21/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-shadow-tal-revivo.png"/> 
+                            <img src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/26/000000/external-level-up-your-coding-skills-and-quickly-land-a-job-logo-shadow-tal-revivo.png"/> 
                         </a>
                     </li>
                     {% endif %}
